adding section in main page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,48 @@
         </div>
     </header>
 
-    
+    <section id="hero">
+        <p>FASTEST & EASIEST WAY TO GET A INSURANCE</p>
+
+        <div class="row">
+            <div class="column">
+                <div class="row">
+                    <div class="column">
+                        <div class="row">
+                            30K+
+                        </div>
+                        <div class="row">
+                            Insurance
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="row">
+                            720+
+                        </div>
+                        <div class="row">
+                            Customers
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="row">
+                            24/7
+                        </div>
+                        <div class="row">
+                            Support
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+
+                </div>
+            </div>
+            <div class="column">
+                <img src="assets/hero.png" alt="hero">
+            </div>
+        </div>
+    </section>
 
     <script>
         const toggleBtn = document.querySelector('.toggle_btn')
