adding display to show client no.

--- a/index.html
+++ b/index.html
@@ -39,37 +39,27 @@
     </header>
 
     <section id="hero">
-        <p>FASTEST & EASIEST WAY TO GET A INSURANCE</p>
+        <p class="head_line">FASTEST & EASIEST WAY TO GET A INSURANCE</p>
 
-        <div class="row">
+        <div class="row hero">
             <div class="column">
                 <div class="row">
-                    <div class="column">
-                        <div class="row">
-                            30K+
+                    <div class="card">
+                        <div class="stat">
+                            <p>30k+</p>
+                            <h3>Insurance</h3>
+                        </div><span>©</span>
+                        <div class="stat">
+                            <p>720+</p>
+                            <h3>Customer</h3>
                         </div>
-                        <div class="row">
-                            Insurance
-                        </div>
-                    </div>
-
-                    <div class="column">
-                        <div class="row">
-                            720+
-                        </div>
-                        <div class="row">
-                            Customers
+                        <span>©</span>
+                        <div class="stat">
+                            <p>24/7</p>
+                            <h3>Support</h3>
                         </div>
                     </div>
 
-                    <div class="column">
-                        <div class="row">
-                            24/7
-                        </div>
-                        <div class="row">
-                            Support
-                        </div>
-                    </div>
                 </div>
                 <div class="row">
 
