completing the hero section

--- a/index.html
+++ b/index.html
@@ -42,30 +42,35 @@
         <p class="head_line">FASTEST & EASIEST WAY TO GET A INSURANCE</p>
 
         <div class="row hero">
-            <div class="column">
+            <div class="column1">
                 <div class="row">
                     <div class="card">
                         <div class="stat">
                             <p>30k+</p>
                             <h3>Insurance</h3>
-                        </div><span>©</span>
+                        </div>
+                        <i class="fa-solid fa-rhombus"></i>
                         <div class="stat">
                             <p>720+</p>
                             <h3>Customer</h3>
                         </div>
-                        <span>©</span>
+                        <i class="fa-solid fa-rhombus"></i>
                         <div class="stat">
                             <p>24/7</p>
                             <h3>Support</h3>
                         </div>
                     </div>
-
                 </div>
                 <div class="row">
-
+                    <div class="card contact_us">
+                        <form>
+                            <input type="text" placeholder="Enter your Name">
+                            <input type="email" placeholder="Enter your Email-Address">
+                            <input type="submit" value="Contact-us">
+                    </div>
                 </div>
             </div>
-            <div class="column">
+            <div class="column2">
                 <img src="assets/hero.png" alt="hero">
             </div>
         </div>
