--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
         <div class="row hero">
             <div class="column1">
+                <!--Count display-->
                 <div class="row">
                     <div class="card">
                         <div class="stat">
@@ -61,6 +62,7 @@
                         </div>
                     </div>
                 </div>
+                <!--contact form-->
                 <div class="row">
                     <div class="card contact_us">
                         <form>
@@ -74,6 +76,10 @@
                 <img src="assets/hero.png" alt="hero">
             </div>
         </div>
+    </section>
+
+    <section id="m_insurance">
+        <p class="head_line">We manage insurance from all over the USA</p>
     </section>
 
     <script>
