adding about section

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                             <p>30k+</p>
                             <h3>Insurance</h3>
                         </div>
-                        <i class="fa-solid fa-rhombus"></i>
+                        <span>&#9830;</span>
                         <div class="stat">
                             <p>720+</p>
                             <h3>Customer</h3>
-                        </div>
-                        <i class="fa-solid fa-rhombus"></i>
+                        </div>                        
+                        <span>&#9830;</span>
                         <div class="stat">
                             <p>24/7</p>
                             <h3>Support</h3>
@@ -78,8 +78,31 @@
         </div>
     </section>
 
-    <section id="m_insurance">
+    <!--m_insurance-->
+    <section id="m_insurance" style="margin-top: 2rem;">
         <p class="head_line">We manage insurance from all over the USA</p>
+
+        <img src="assets/Usa map.png" alt="usa_map">
+    </section>
+
+    <!--about_us-->
+    <section id="about_us">
+        <div class="row">
+            <div class="column1">
+                <div class="headline" style="padding-bottom: 2rem;">
+                    <h1 class="head_line">About-us</h1>
+                </div>
+                <p class="about_p">Lorem ipsum dolor sit amet consectetur
+                    adipiscing elit Ut et massa mi. Aliquam in
+                    hendrerit urna. Pellentesque sit amet
+                    sapien fringilla, mattis ligula
+                    consectetur, ultrices., mattis ligula
+                    consectetur, ultrices.</p>
+            </div>
+            <div class="column2">
+                <img src="assets/about.png" alt="about">
+            </div>
+        </div>
     </section>
 
     <script>
