complete the about section

--- a/index.html
+++ b/index.html
@@ -87,19 +87,20 @@
 
     <!--about_us-->
     <section id="about_us">
-        <div class="row">
-            <div class="column1">
-                <div class="headline" style="padding-bottom: 2rem;">
-                    <h1 class="head_line">About-us</h1>
+        <h1 class="reshead_line">About-us</h1>
+        <div class="row about">
+            <div class="column3">
+                <h1 class="head_line">About-us</h1>
+                <div class="row">
+                    <p class="about_p" style="text-align: justify; padding-right: 0.6rem;">Lorem ipsum dolor sit amet consectetur
+                        adipiscing elit Ut et massa mi. Aliquam in
+                        hendrerit urna. Pellentesque sit amet
+                        sapien fringilla, mattis ligula
+                        consectetur, ultrices., mattis ligula
+                        consectetur, ultrices.</p>
                 </div>
-                <p class="about_p">Lorem ipsum dolor sit amet consectetur
-                    adipiscing elit Ut et massa mi. Aliquam in
-                    hendrerit urna. Pellentesque sit amet
-                    sapien fringilla, mattis ligula
-                    consectetur, ultrices., mattis ligula
-                    consectetur, ultrices.</p>
             </div>
-            <div class="column2">
+            <div class="column4">
                 <img src="assets/about.png" alt="about">
             </div>
         </div>
