adding services page

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <div class="stat">
                             <p>720+</p>
                             <h3>Customer</h3>
-                        </div>                        
+                        </div>
                         <span>&#9830;</span>
                         <div class="stat">
                             <p>24/7</p>
@@ -92,7 +92,8 @@
             <div class="column3">
                 <h1 class="head_line">About-us</h1>
                 <div class="row">
-                    <p class="about_p" style="text-align: justify; padding-right: 0.6rem;">Lorem ipsum dolor sit amet consectetur
+                    <p class="about_p" style="text-align: justify; padding-right: 0.6rem;">Lorem ipsum dolor sit amet
+                        consectetur
                         adipiscing elit Ut et massa mi. Aliquam in
                         hendrerit urna. Pellentesque sit amet
                         sapien fringilla, mattis ligula
@@ -104,6 +105,42 @@
                 <img src="assets/about.png" alt="about">
             </div>
         </div>
+    </section>
+
+    <!--Services-->
+    <section id="services">
+        <h1 class="head_line">Services</h1>
+        <p class="service_para">Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in
+            hendrerit urna.
+            Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices., mattis ligula consectetur,
+            ultrices.</p>
+
+        <div class="card2">
+            <div class="card-item">
+                <img src="assets/ser1.png" alt="service1">
+                <div class="card-item_dis">
+                    <p style="padding-bottom: 5px;">Accidental damage</p>
+                    <a href="">Learn more <i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <span style="margin: 15px;">&#9830;</span>
+            <div class="card-item">
+                <img src="assets/ser2.png" alt="service2">
+                <div class="card-item_dis">
+                    <p style="padding-bottom: 5px;">Transport Permit</p>
+                    <a href="">Learn more <i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <span style="margin: 15px;">&#9830;</span>
+            <div class="card-item">
+                <img src="assets/ser3.png" alt="service3">
+                <div class="card-item_dis">
+                    <p style="padding-bottom: 5px;">Trucking insurance</p>
+                    <a href="">Learn more <i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+
     </section>
 
     <script>
