adding review section

--- a/index.html
+++ b/index.html
@@ -140,7 +140,60 @@
                 </div>
             </div>
         </div>
+    </section>
 
+    <!--Reviews-->
+    <section id="reviews">
+        <p class="head_line">Trusted by Thousands of Happy Customers &#128522;</p>
+
+        <div class="row reviews_p">
+            <div class="column5">
+                <div class="p_detail" style="display: flex; justify-content: space-between;">
+                    <img src="assets/R1.png" alt="p_img">
+                    <div class="p_info">
+                        <h3>Daniel Sprouse</h3>
+                        <span>Director, Trucking.com</span>
+                    </div>
+                </div>
+
+                <div class="seprator">
+                    <span>&#9830;</span>
+                </div>
+
+                <div class="p_detail" style="display: flex; justify-content: space-between;">
+                    <img src="assets/R2.png" alt="p_img">
+                    <div class="p_info">
+                        <h3>Daniel Sprouse</h3>
+                        <span>Director, Trucking.com</span>
+                    </div>
+                </div>
+
+                <div class="seprator">
+                    <span>&#9830;</span>
+                </div>
+                <div class="p_detail" style="display: flex; justify-content: space-between;">
+                    <img src="assets/R3.png" alt="p_img">
+                    <div class="p_info">
+                        <h3>Daniel Sprouse</h3>
+                        <span>Director, Trucking.com</span>
+                    </div>
+                </div>
+            </div>
+            <div class="column6">
+                <div class="g_review">
+                    <h3>It was a Wonderful Experience!</h3><br>
+                    <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
+                    <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
+                    <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
+                    <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
+                    <i class="fa-regular fa-star"></i><br>
+                    <br>
+                    <p>"Wow... I am very happy to use this VPN, it turned out to be
+                        more than my expectations and so far there have been no
+                        problems. LaslesVPN always the best”.</p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <script>
