add contact form or help dest

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <!--about_us-->
     <section id="about_us">
-        <h1 class="reshead_line">About-us</h1>
+        <h1 class="reshead_line" style="margin-bottom: 20px;">About-us</h1>
         <div class="row about">
             <div class="column3">
                 <h1 class="head_line">About-us</h1>
@@ -193,6 +193,21 @@
                         problems. LaslesVPN always the best”.</p>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!--Be a part-->
+    <section id="help_desk">
+        <p class="head_line">Want to be part of Mayflower</p>
+        <br>
+        <h1>Enter Your Email-Address & Phone-Number<br>
+            We will contact you soon</h1>
+
+        <div class="contact_form">
+            <form>
+                <input type="text" placeholder="Enter your Name">
+                <input type="email" placeholder="Enter your Email-Address">
+                <input type="submit" value="Contact-us">
         </div>
     </section>
 
