--- a/index.html
+++ b/index.html
@@ -65,10 +65,13 @@
                 <!--contact form-->
                 <div class="row">
                     <div class="card contact_us">
-                        <form>
+                        <form class="input-icons">
+                            <i class="fa-solid fa-user-group icon"></i>
                             <input type="text" placeholder="Enter your Name">
+                            <i class="fa-light fa-at icon"></i>
                             <input type="email" placeholder="Enter your Email-Address">
                             <input type="submit" value="Contact-us">
+                        </form>
                     </div>
                 </div>
             </div>
@@ -152,7 +155,7 @@
                     <img src="assets/R1.png" alt="p_img">
                     <div class="p_info">
                         <h3>Daniel Sprouse</h3>
-                        <span>Director, Trucking.com</span>
+                        <span style="color: #606060;">Director, Trucking.com</span>
                     </div>
                 </div>
 
@@ -163,8 +166,8 @@
                 <div class="p_detail" style="display: flex; justify-content: space-between;">
                     <img src="assets/R2.png" alt="p_img">
                     <div class="p_info">
-                        <h3>Daniel Sprouse</h3>
-                        <span>Director, Trucking.com</span>
+                        <h3>Jonathan Anderson</h3>
+                        <span style="color: #606060;">Insurance Manager, Fillio.co</span>
                     </div>
                 </div>
 
@@ -174,8 +177,8 @@
                 <div class="p_detail" style="display: flex; justify-content: space-between;">
                     <img src="assets/R3.png" alt="p_img">
                     <div class="p_info">
-                        <h3>Daniel Sprouse</h3>
-                        <span>Director, Trucking.com</span>
+                        <h3>Devi Singh</h3>
+                        <span style="color: #606060;">Driver, 16wheels.co</span>
                     </div>
                 </div>
             </div>
@@ -204,9 +207,11 @@
             We will contact you soon</h1>
 
         <div class="contact_form">
-            <form>
-                <input type="text" placeholder="Enter your Name">
+            <form class="input-icons">
+                <i class="fa-light fa-at icon"></i>
                 <input type="email" placeholder="Enter your Email-Address">
+                <i class="fa-solid fa-phone icon"></i>
+                <input type="text" placeholder="Enter your Phone-Number">
                 <input type="submit" value="Contact-us">
         </div>
     </section>
