--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div class="navbar">
             <div class="logo"><a href="index.html"><img src="assets/mayflowerlogo1 1logo.png" alt="logo"></a></div>
             <ul class="links">
-                <li><a href="">Home</a></li>
-                <li><a href="">About-us</a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#about_us">About-us</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact_form">Contact</a></li>
             </ul>
             <a href="" class="login_btn">Log-in</a>
             <div class="toggle_btn">
@@ -30,10 +30,10 @@
         </div>
 
         <div class="dropdown_menu">
-            <li><a href="">Home</a></li>
-            <li><a href="">About-us</a></li>
-            <li><a href="">Services</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#about_us">About-us</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact_form">Contact</a></li>
             <li><a href="" class="login_btn">Log-in</a></li>
         </div>
     </header>
@@ -206,7 +206,7 @@
         <h1>Enter Your Email-Address & Phone-Number<br>
             We will contact you soon</h1>
 
-        <div class="contact_form">
+        <div class="contact_form" id="contact_form">
             <form class="input-icons">
                 <i class="fa-light fa-at icon"></i>
                 <input type="email" placeholder="Enter your Email-Address">
