--- a/index.html
+++ b/index.html
@@ -216,6 +216,79 @@
         </div>
     </section>
 
+    <!--footer-->
+    <section id="footer">
+        <div class="footer">
+            <div class="row top_row">
+                <div class="column">
+                    <img src="assets/mayflowerlogo1 1logo.png" alt="logo">
+                    <h3 style="padding-top: 35px;">Fastest & Easiest way to get your
+                        insurance</h3>
+                </div>
+                <div class="column f_links">
+                    <h3>Services</h3>
+                    <hr style="border-top: 2px solid black;">
+                    <ul>
+                        <li><a href="#">Transport Permit</a></li>
+                        <li><a href="#">Travel Permit</a></li>
+                        <li><a href="#">Insurance</a>new</li>
+                        <li><a href="#">Accidental damage</a></li>
+                    </ul>
+                </div>
+
+                <div class="column f_links">
+                    <h3>Company</h3>
+                    <hr style="border-top: 2px solid black;">
+                    <ul>
+                        <li><a href="#">About-us</a></li>
+                        <li><a href="#">Contact-us</a></li>
+                        <li><a href="#">Testimonia</a></li>
+                    </ul>
+                </div>
+
+                <div class="column f_links">
+                    <h3>Legal</h3>
+                    <hr style="border-top: 2px solid black;">
+                    <ul>
+                        <li><a href="#">Privacy & Terms</a></li>
+                        <li><a href="#">Cookies</a></li>
+                        <li><a href="#">Licenses</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="row bottom_row non_responsive">
+                <div class="column">
+                    <p style="padding-top: 25px;">© 2077 Mayflower. All Rights Reserved</p>
+                </div>
+
+                <div class="column fb_links">
+                    <h3 class="fb_disc">Social</h3>
+                    <hr class="fb_seprator" style="border-top: 2px solid black;">
+                    <span><a href="">Instagram</a></span>
+                    <span><a href="">Facebook</a></span>
+                    <span><a href="">LinkedIn</a></span>
+                    <span><a href="">Twitter</a></span>
+                </div>
+            </div>
+
+            <div class="row bottom_row responsive">
+                <div class="column fb_links">
+                    <h3 class="fb_disc">Social</h3>
+                    <hr class="fb_seprator" style="border-top: 2px solid black;">
+                    <span><a href="">Instagram</a></span>
+                    <span><a href="">Facebook</a></span>
+                    <span><a href="">LinkedIn</a></span>
+                    <span><a href="">Twitter</a></span>
+                </div>
+
+                <div class="column">
+                    <p style="padding-top: 25px;">© 2077 Mayflower. All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script>
         const toggleBtn = document.querySelector('.toggle_btn')
         const toggleBtnIcon = document.querySelector('.toggle_btn i')
