--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
                     <h3>Company</h3>
                     <hr style="border-top: 2px solid black;">
                     <ul>
-                        <li><a href="#">About-us</a></li>
-                        <li><a href="#">Contact-us</a></li>
-                        <li><a href="#">Testimonia</a></li>
+                        <li><a href="#about_us">About-us</a></li>
+                        <li><a href="#contact_form">Contact-us</a></li>
+                        <li><a href="#reviews">Testimonia</a></li>
                     </ul>
                 </div>
 
@@ -272,6 +272,7 @@
                 </div>
             </div>
 
+            <!--for responsive only-->
             <div class="row bottom_row responsive">
                 <div class="column fb_links">
                     <h3 class="fb_disc">Social</h3>
