--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact_form">Contact</a></li>
             </ul>
-            <a href="" class="login_btn">Log-in</a>
+            <a href="login_signin.html" class="login_btn">Log-in</a>
             <div class="toggle_btn">
                 <i class="fa-solid fa-bars"></i>
             </div>
@@ -34,7 +34,7 @@
             <li><a href="#about_us">About-us</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#contact_form">Contact</a></li>
-            <li><a href="" class="login_btn">Log-in</a></li>
+            <li><a href="login_signin.html" class="login_btn">Log-in</a></li>
         </div>
     </header>
 
