--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div class="footer">
             <div class="row top_row">
                 <div class="column">
-                    <img src="assets/mayflowerlogo1 1logo.png" alt="logo">
+                    <img src="assets/f_logo.png" alt="logo">
                     <h3 style="padding-top: 35px;">Fastest & Easiest way to get your
                         insurance</h3>
                 </div>
