--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <ul>
                         <li><a href="#">Transport Permit</a></li>
                         <li><a href="#">Travel Permit</a></li>
-                        <li><a href="#">Insurance</a>new</li>
+                        <li><a href="#">Insurance</a><span style="padding: 1px; background-color: #fdcb16; color: #000; border-radius: 10px;">new</span></li>
                         <li><a href="#">Accidental damage</a></li>
                     </ul>
                 </div>
