--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                             <p>30k+</p>
                             <h3>Insurance</h3>
                         </div>
-                        <span>&#9830;</span>
+                        <span class="dimond">&#9830;</span>
                         <div class="stat">
                             <p>720+</p>
                             <h3>Customer</h3>
                         </div>
-                        <span>&#9830;</span>
+                        <span class="dimond">&#9830;</span>
                         <div class="stat">
                             <p>24/7</p>
                             <h3>Support</h3>
@@ -126,7 +126,7 @@
                     <a href="">Learn more <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
-            <span style="margin: 15px;">&#9830;</span>
+            <span class="dimond" style="margin: 15px;">&#9830;</span>
             <div class="card-item">
                 <img src="assets/ser2.png" alt="service2">
                 <div class="card-item_dis">
@@ -134,7 +134,7 @@
                     <a href="">Learn more <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
-            <span style="margin: 15px;">&#9830;</span>
+            <span class="dimond" style="margin: 15px;">&#9830;</span>
             <div class="card-item">
                 <img src="assets/ser3.png" alt="service3">
                 <div class="card-item_dis">
@@ -160,7 +160,7 @@
                 </div>
 
                 <div class="seprator">
-                    <span>&#9830;</span>
+                    <span class="dimond">&#9830;</span>
                 </div>
 
                 <div class="p_detail" style="display: flex; justify-content: space-between;">
@@ -172,7 +172,7 @@
                 </div>
 
                 <div class="seprator">
-                    <span>&#9830;</span>
+                    <span class="dimond">&#9830;</span>
                 </div>
                 <div class="p_detail" style="display: flex; justify-content: space-between;">
                     <img src="assets/R3.png" alt="p_img">
