--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <a href="">Learn more <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
-            <span class="dimond" style="margin: 15px;">&#9670;</span>
+            <span class="dimond" style="margin: 0 15px;">&#9670;</span>
             <div class="card-item">
                 <img src="assets/ser2.png" alt="service2">
                 <div class="card-item_dis">
@@ -231,7 +231,10 @@
                     <ul>
                         <li><a href="#">Transport Permit</a></li>
                         <li><a href="#">Travel Permit</a></li>
-                        <li><a href="#">Insurance</a><span style="padding: 1px; background-color: #fdcb16; color: #000; border-radius: 10px;">new</span></li>
+                        <li><a href="#">Insurance</a><span
+                                style="padding: 1px; background-color: #fdcb16; color: #000; border-radius: 10px;"> new
+                            </span>
+                        </li>
                         <li><a href="#">Accidental damage</a></li>
                     </ul>
                 </div>
