--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#about_us">About-us</a></li>
                 <li><a href="#services">Services</a></li>
-                <li><a href="#contact_form">Contact</a></li>
+                <li><a href="#help_desk">Contact</a></li>
             </ul>
             <a href="login_signin.html" class="login_btn">Log-in</a>
             <div class="toggle_btn">
@@ -33,7 +33,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="#about_us">About-us</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#contact_form">Contact</a></li>
+            <li><a href="#help_desk">Contact</a></li>
             <li><a href="login_signin.html" class="login_btn">Log-in</a></li>
         </div>
     </header>
@@ -244,7 +244,7 @@
                     <hr style="border-top: 2px solid black;">
                     <ul>
                         <li><a href="#about_us">About-us</a></li>
-                        <li><a href="#contact_form">Contact-us</a></li>
+                        <li><a href="#help_desk">Contact-us</a></li>
                         <li><a href="#reviews">Testimonia</a></li>
                     </ul>
                 </div>
