adding new features in testimonial section

--- a/index.html
+++ b/index.html
@@ -149,51 +149,68 @@
     <section id="reviews">
         <p class="head_line">Trusted by Thousands of Happy Customers &#128522;</p>
 
-        <div class="row reviews_p">
-            <div class="column5">
-                <div class="p_detail" style="display: flex; justify-content: space-between;">
-                    <img src="assets/R1.png" alt="p_img">
-                    <div class="p_info">
-                        <h3>Daniel Sprouse</h3>
-                        <span style="color: #606060;">Director, Trucking.com</span>
-                    </div>
-                </div>
+        <div class="testmonials" style="margin-top: 4rem;">
+            <div class="inner">
+                <div class="t_row">
+                    <div class="t_col">
+                        <div class="testmonial">
+                            <img src="assets/R1.png" alt="R1">
+                            <div class="name">Daniel Sprouse</div>
+                            <span style="color: #606060;">Director, Trucking.com</span>
+                            <div class="stars">
+                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
+                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
+                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
+                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
+                                <i class="fa-regular fa-star"></i><br>
+                            </div>
+                            <h3>It was a Wonderful Experience!</h3><br>
+                            <p>"Wow... I am very happy to use this VPN, it turned out to be
+                                more than my expectations and so far there have been no
+                                problems. LaslesVPN always the best”.</p>
 
-                <div class="seprator">
-                    <span class="dimond">&#9670;</span>
-                </div>
-
-                <div class="p_detail" style="display: flex; justify-content: space-between;">
-                    <img src="assets/R2.png" alt="p_img">
-                    <div class="p_info">
-                        <h3>Jonathan Anderson</h3>
-                        <span style="color: #606060;">Insurance Manager, Fillio.co</span>
+                        </div>
                     </div>
-                </div>
 
-                <div class="seprator">
-                    <span class="dimond">&#9670;</span>
-                </div>
-                <div class="p_detail" style="display: flex; justify-content: space-between;">
-                    <img src="assets/R3.png" alt="p_img">
-                    <div class="p_info">
-                        <h3>Devi Singh</h3>
-                        <span style="color: #606060;">Driver, 16wheels.co</span>
+                    <div class="t_col">
+                        <div class="testmonial">
+                            <img src="assets/R2.png" alt="R1">
+                            <div class="name">Jonathan Anderson</div>
+                            <span style="color: #606060;">Insurance Manager, Fillio.co</span>
+                            <div class="stars">
+                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
+                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
+                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
+                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
+                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i><br>
+                            </div>
+                            <h3>It was a Wonderful Experience!</h3><br>
+                            <p>"Wow... I am very happy to use this VPN, it turned out to be
+                                more than my expectations and so far there have been no
+                                problems. LaslesVPN always the best”.</p>
+
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="column6">
-                <div class="g_review">
-                    <h3>It was a Wonderful Experience!</h3><br>
-                    <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
-                    <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
-                    <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
-                    <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
-                    <i class="fa-regular fa-star"></i><br>
-                    <br>
-                    <p>"Wow... I am very happy to use this VPN, it turned out to be
-                        more than my expectations and so far there have been no
-                        problems. LaslesVPN always the best”.</p>
+
+                    <div class="t_col">
+                        <div class="testmonial">
+                            <img src="assets/R3.png" alt="R1">
+                            <div class="name">Devi Singh</div>
+                            <span style="color: #606060;">Driver, 16wheels.co</span>
+                            <div class="stars">
+                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
+                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
+                                <i class="fa-solid fa-star" style="color: #fdcb16;"></i>
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i><br>
+                            </div>
+                            <h3>It was a Wonderful Experience!</h3><br>
+                            <p>"Wow... I am very happy to use this VPN, it turned out to be
+                                more than my expectations and so far there have been no
+                                problems. LaslesVPN always the best”.</p>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -221,7 +238,7 @@
         <div class="footer">
             <div class="row top_row">
                 <div class="column">
-                    <img src="assets/f_logo.png" alt="logo">
+                    <img style="filter: invert(1);" src="assets/f_logo.png" alt="logo">
                     <h3 style="padding-top: 35px;">Fastest & Easiest way to get your
                         insurance</h3>
                 </div>
