--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
     </section>
 
-    <!--Reviews-->
+    <!--Reviews / Testimonial-->
     <section id="reviews">
         <p class="head_line">Trusted by Thousands of Happy Customers &#128522;</p>
 
