--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                     <ul>
                         <li><a href="#about_us">About-us</a></li>
                         <li><a href="#help_desk">Contact-us</a></li>
-                        <li><a href="#reviews">Testimonia</a></li>
+                        <li><a href="#reviews">Testimonial</a></li>
                     </ul>
                 </div>
 
