--- a/login_signin.html
+++ b/login_signin.html
@@ -27,6 +27,23 @@
         </div>
     </header>
 
+    <div class="container">
+        <div class="form-container">
+          <form id="login-form" class="form">
+            <h2>Login</h2>
+            <input type="text" placeholder="Username" required>
+            <input type="password" placeholder="Password" required>
+            <button type="submit">Login</button>
+          </form><br>
+          <form id="signup-form" class="form">
+            <h2>Sign Up</h2>
+            <input type="text" placeholder="Username" required>
+            <input type="password" placeholder="Password" required>
+            <button type="submit">Sign Up</button>
+          </form>
+        </div>
+      </div>
+    
     <script>
         const toggleBtn = document.querySelector('.toggle_btn')
         const toggleBtnIcon = document.querySelector('.toggle_btn i')
