commenting all the code for better understanding

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </div>
         </div>
 
+        <!--responsive navbar view-->
         <div class="dropdown_menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="#about_us">About-us</a></li>
@@ -38,12 +39,13 @@
         </div>
     </header>
 
+    <!--hero section-->
     <section id="hero">
         <p class="head_line">FASTEST & EASIEST WAY TO GET A INSURANCE</p>
 
         <div class="row hero">
             <div class="column1">
-                <!--Count display-->
+                <!--Subscriber display-->
                 <div class="row">
                     <div class="card">
                         <div class="stat">
@@ -62,7 +64,7 @@
                         </div>
                     </div>
                 </div>
-                <!--contact form-->
+                <!--contact_us-->
                 <div class="row">
                     <div class="card contact_us">
                         <form class="input-icons">
@@ -76,6 +78,7 @@
                 </div>
             </div>
             <div class="column2">
+                <!--main image-->
                 <img src="assets/hero.png" alt="hero">
             </div>
         </div>
@@ -118,6 +121,7 @@
             Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices., mattis ligula consectetur,
             ultrices.</p>
 
+        <!--services give by us-->
         <div class="card2">
             <div class="card-item">
                 <img src="assets/ser1.png" alt="service1">
@@ -126,7 +130,9 @@
                     <a href="">Learn more <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
+
             <span class="dimond" style="margin: 0 15px;">&#9670;</span>
+
             <div class="card-item">
                 <img src="assets/ser2.png" alt="service2">
                 <div class="card-item_dis">
@@ -134,7 +140,9 @@
                     <a href="">Learn more <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
+
             <span class="dimond" style="margin: 15px;">&#9670;</span>
+
             <div class="card-item">
                 <img src="assets/ser3.png" alt="service3">
                 <div class="card-item_dis">
@@ -149,6 +157,7 @@
     <section id="reviews">
         <p class="head_line">Trusted by Thousands of Happy Customers &#128522;</p>
 
+        <!--given reviews-->
         <div class="testmonials" style="margin-top: 4rem;">
             <div class="inner">
                 <div class="t_row">
@@ -168,7 +177,6 @@
                             <p>"Wow... I am very happy to use this VPN, it turned out to be
                                 more than my expectations and so far there have been no
                                 problems. LaslesVPN always the best”.</p>
-
                         </div>
                     </div>
 
@@ -188,7 +196,6 @@
                             <p>"Wow... I am very happy to use this VPN, it turned out to be
                                 more than my expectations and so far there have been no
                                 problems. LaslesVPN always the best”.</p>
-
                         </div>
                     </div>
 
@@ -208,7 +215,6 @@
                             <p>"Wow... I am very happy to use this VPN, it turned out to be
                                 more than my expectations and so far there have been no
                                 problems. LaslesVPN always the best”.</p>
-
                         </div>
                     </div>
                 </div>
@@ -223,6 +229,7 @@
         <h1>Enter Your Email-Address & Phone-Number<br>
             We will contact you soon</h1>
 
+            <!--contact us form-->
         <div class="contact_form" id="contact_form">
             <form class="input-icons">
                 <i class="fa-light fa-at icon"></i>
@@ -243,7 +250,7 @@
                         insurance</h3>
                 </div>
                 <div class="column f_links">
-                    <h3>Services</h3>
+                    <h3>Services</h3><!--servides-->
                     <hr style="border-top: 2px solid black;">
                     <ul>
                         <li><a href="#">Transport Permit</a></li>
@@ -257,7 +264,7 @@
                 </div>
 
                 <div class="column f_links">
-                    <h3>Company</h3>
+                    <h3>Company</h3><!--company details-->
                     <hr style="border-top: 2px solid black;">
                     <ul>
                         <li><a href="#about_us">About-us</a></li>
@@ -267,7 +274,7 @@
                 </div>
 
                 <div class="column f_links">
-                    <h3>Legal</h3>
+                    <h3>Legal</h3><!--legal documents-->
                     <hr style="border-top: 2px solid black;">
                     <ul>
                         <li><a href="#">Privacy & Terms</a></li>
@@ -283,7 +290,7 @@
                 </div>
 
                 <div class="column fb_links">
-                    <h3 class="fb_disc">Social</h3>
+                    <h3 class="fb_disc">Social</h3><!--social media links-->
                     <hr class="fb_seprator" style="border-top: 2px solid black;">
                     <span><a href="">Instagram</a></span>
                     <span><a href="">Facebook</a></span>
@@ -311,6 +318,7 @@
     </section>
 
     <script>
+        //for responsive navbar
         const toggleBtn = document.querySelector('.toggle_btn')
         const toggleBtnIcon = document.querySelector('.toggle_btn i')
         const dropDownMenu = document.querySelector('.dropdown_menu')
