--- a/login_signin.html
+++ b/login_signin.html
@@ -29,6 +29,7 @@
         </div>
     </header>
 
+    <!--login and signup page-->
     <div class="container">
         <div class="form-container">
             <form id="login-form" class="form">
@@ -47,6 +48,7 @@
     </div>
 
     <script>
+        //navbar script for responsive view
         const toggleBtn = document.querySelector('.toggle_btn')
         const toggleBtnIcon = document.querySelector('.toggle_btn i')
         const dropDownMenu = document.querySelector('.dropdown_menu')
